feat: uprage to block-contract v3.1.1